--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "express": "^4.21.2",
     "mongodb": "^6.15.0",
     "mongoose": "^8.13.0",
+    "nodemon": "^3.1.9",
     "twilio": "^5.5.1"
   }
 }
